--- a/public/file.html
+++ b/public/file.html
@@ -1,6 +1,9 @@
 <html>
-    <head><title>Hello Directories</title></head>
-    <body>
-        Hello Directories
-    </body>
+<body>
+	<iframe frameborder="0" src="http://localhost:8080/proxy" style="position: fixed;top: 0px;width: 100%; height: 100%; left: 0px; background: pink;">
+	</iframe>
+
+	<script type="text/javascript">
+	</script>
+</body>
 </html>
